tests/ui/marker_trait_attr/overlap-marker-trait.stderr
error[E0277]: the trait bound `NotDebugOrDisplay: Marker` is not satisfied
  --> $DIR/overlap-marker-trait.rs:28:17
   |
LL |     is_marker::<NotDebugOrDisplay>();
   |                 ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Marker` is not implemented for `NotDebugOrDisplay`
  --> $DIR/overlap-marker-trait.rs:18:1
   |
LL | struct NotDebugOrDisplay;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `is_marker`
  --> $DIR/overlap-marker-trait.rs:16:17
   |
LL | fn is_marker<T: Marker>() { }
   |                 ^^^^^^ required by this bound in `is_marker`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
